1999-09-19  Alexander Larsson  <alla@lysator.liu.se>

	* objects/UML/class.h: 
	* objects/UML/class_dialog.c:
	Retrun NULL ObjectChange on class property change.
	This means no crashes, but "UML - Class" doesn't support undo yet.
	
1999-09-19  Alexander Larsson  <alla@lysator.liu.se>
	
	* lib/text.c:
	Indentation fix.

	* objects/UML/classicon.c:
	* objects/UML/dependency.c:
	* objects/UML/generalization.c:
	* objects/UML/implements.c:
	* objects/UML/large_package.c:
	* objects/UML/lifeline.c:
	* objects/UML/message.c:
	* objects/UML/object.c:
	* objects/UML/realizes.c:
	* objects/UML/state.c:
	* objects/UML/usecase.c:
	Update to new undo (w. get/set_state).
	Add object menu to add/delete segments.

1999-09-17  Alexander Larsson  <alla@lysator.liu.se>

	* app/menus.c:
 	Add equal distance alignment.

	* app/object_ops.c:
	Add equal distance alignment.
	Fix bug in adjacent alignment.

1999-09-16  Alexander Larsson  <alla@lysator.liu.se>

	* objects/UML/constraint.c: 
	Update to new undo (w. get/set_state).

1999-09-15  Alexander Larsson  <alla@lysator.liu.se>

	* app/paginate_psprint.c:
	Save (parts, more todo) of the info in the print dialog to the
	next time it's opened.
	Patch from Yo Ric Dude <ricdude@toad.net>

1999-09-14  Alexander Larsson  <alla@lysator.liu.se>

	* configure.in:
	Updated version string to 0.41cvs.

	* objects/UML/assocition.c:
	Update to new undo (w. get/set_state).
	Add object menu to add/delete segments.

	* app/app_procs.c:
	Added function debug_break() and called it after all
	objects and sheets are loaded. Place a breakpoint here if you
	want to debug objects. All symbols should be loaded.

1999-09-12  James Henstridge  <james@daa.com.au>

	* app/menus.c (display_menu_items): added print menu item.
	(filemenu): always add print menu item -- even if gnome-print is
	not installed.

	* app/commands.h, app/commands.c (file_print_callback): the print
	menu item is now available for both gnome-print and non gnome-print
	setups.
