@@ -1,263 +1,270 @@
 /* XPM */
-static char * dia7_xpm[] = {
-"64 64 196 2",
+static char * dia3_xpm[] = {
+"64 64 202 2",
 "  	c None",
-". 	c #D8D8D8",
-"+ 	c #D9D9D9",
-"@ 	c #DADADA",
-"# 	c #DBDBDB",
-"$ 	c #DCDCDC",
-"% 	c #DDDDDD",
-"& 	c #DEDEDE",
-"* 	c #DFDFDF",
-"= 	c #E0E0E0",
-"- 	c #E1E1E1",
-"; 	c #E2E2E2",
-"> 	c #E3E3E3",
-", 	c #E5E5E5",
-"' 	c #E6E6E6",
-") 	c #E7E7E7",
-"! 	c #E8E8E8",
-"~ 	c #E9E9E9",
-"{ 	c #EAEAEA",
-"] 	c #EBEBEB",
-"^ 	c #ECECEC",
-"/ 	c #EDEDED",
-"( 	c #EEEEEE",
-"_ 	c #EFEFEF",
-": 	c #F0F0F0",
-"< 	c #F1F1F1",
-"[ 	c #F2F2F2",
-"} 	c #F3F3F3",
-"| 	c #F4F4F4",
-"1 	c #F5F5F5",
-"2 	c #F6F6F6",
-"3 	c #F7F7F7",
-"4 	c #F8F8F8",
-"5 	c #F9F9F9",
-"6 	c #FAFAFA",
-"7 	c #FBFBFB",
-"8 	c #FCFCFC",
-"9 	c #FDFDFD",
-"0 	c #FEFEFE",
-"a 	c #D7D7D7",
-"b 	c #E4E4E4",
+". 	c #FFFFFF",
+"+ 	c #A5A5A5",
+"@ 	c #D8D8D8",
+"# 	c #D9D9D9",
+"$ 	c #DADADA",
+"% 	c #DBDBDB",
+"& 	c #DCDCDC",
+"* 	c #DDDDDD",
+"= 	c #DEDEDE",
+"- 	c #DFDFDF",
+"; 	c #E0E0E0",
+"> 	c #E1E1E1",
+", 	c #E2E2E2",
+"' 	c #E3E3E3",
+") 	c #E5E5E5",
+"! 	c #E6E6E6",
+"~ 	c #E7E7E7",
+"{ 	c #E8E8E8",
+"] 	c #E9E9E9",
+"^ 	c #EAEAEA",
+"/ 	c #EBEBEB",
+"( 	c #ECECEC",
+"_ 	c #EDEDED",
+": 	c #EEEEEE",
+"< 	c #EFEFEF",
+"[ 	c #F0F0F0",
+"} 	c #F1F1F1",
+"| 	c #F2F2F2",
+"1 	c #F3F3F3",
+"2 	c #F4F4F4",
+"3 	c #F5F5F5",
+"4 	c #F6F6F6",
+"5 	c #F7F7F7",
+"6 	c #F8F8F8",
+"7 	c #F9F9F9",
+"8 	c #FAFAFA",
+"9 	c #FBFBFB",
+"0 	c #FCFCFC",
+"a 	c #FDFDFD",
+"b 	c #FEFEFE",
 "c 	c #000000",
-"d 	c #D6D6D6",
-"e 	c #D1D1D1",
-"f 	c #D5D5D5",
-"g 	c #00FF00",
-"h 	c #BFBFBF",
-"i 	c #C9C9C9",
-"j 	c #D2D2D2",
-"k 	c #D4D4D4",
-"l 	c #D3D3D3",
-"m 	c #ABABAB",
-"n 	c #B9B9B9",
-"o 	c #C8C8C8",
-"p 	c #9A9A9A",
-"q 	c #CFCFCF",
-"r 	c #909090",
-"s 	c #A3A3A3",
-"t 	c #CDCDCD",
-"u 	c #8A8A8A",
-"v 	c #9F9F9F",
-"w 	c #B7B7B7",
-"x 	c #CACACA",
-"y 	c #CECECE",
-"z 	c #888888",
-"A 	c #9D9D9D",
-"B 	c #B5B5B5",
-"C 	c #898989",
-"D 	c #D0D0D0",
-"E 	c #CCCCCC",
-"F 	c #8D8D8D",
-"G 	c #A1A1A1",
-"H 	c #B6B6B6",
-"I 	c #C4C4C4",
-"J 	c #A2A2A2",
-"K 	c #929292",
-"L 	c #878787",
-"M 	c #838383",
-"N 	c #858585",
-"O 	c #8B8B8B",
-"P 	c #969696",
-"Q 	c #A8A8A8",
-"R 	c #BCBCBC",
-"S 	c #C7C7C7",
-"T 	c #BBBBBB",
-"U 	c #ACACAC",
-"V 	c #919191",
-"W 	c #949494",
-"X 	c #A4A4A4",
-"Y 	c #B2B2B2",
-"Z 	c #C2C2C2",
-"` 	c #C1C1C1",
-" .	c #B4B4B4",
-"..	c #BEBEBE",
-"+.	c #CBCBCB",
-"@.	c #C6C6C6",
-"#.	c #C3C3C3",
-"$.	c #AAAAAA",
-"%.	c #393939",
-"&.	c #464646",
-"*.	c #5B5B5B",
-"=.	c #060606",
-"-.	c #0E0E0E",
-";.	c #1D1D1D",
-">.	c #383838",
-",.	c #606060",
-"'.	c #BDBDBD",
-").	c #A9A9A9",
-"!.	c #A7A7A7",
-"~.	c #A5A5A5",
-"{.	c #989898",
-"].	c #ADADAD",
-"^.	c #AEAEAE",
-"/.	c #AFAFAF",
-"(.	c #B0B0B0",
-"_.	c #565656",
-":.	c #010101",
-"<.	c #020202",
-"[.	c #262626",
-"}.	c #666666",
-"|.	c #A6A6A6",
-"1.	c #A0A0A0",
-"2.	c #FF6600",
-"3.	c #B3B3B3",
-"4.	c #535353",
-"5.	c #1C1C1C",
-"6.	c #040404",
-"7.	c #0C0C0C",
-"8.	c #3D3D3D",
-"9.	c #959595",
-"0.	c #9E9E9E",
-"a.	c #B8B8B8",
-"b.	c #BABABA",
-"c.	c #B1B1B1",
-"d.	c #676767",
-"e.	c #2E2E2E",
-"f.	c #080808",
-"g.	c #050505",
-"h.	c #202020",
-"i.	c #555555",
-"j.	c #C0C0C0",
-"k.	c #C5C5C5",
-"l.	c #323232",
-"m.	c #131313",
-"n.	c #505050",
-"o.	c #6A6A6A",
-"p.	c #282828",
-"q.	c #141414",
-"r.	c #4F4F4F",
-"s.	c #363636",
-"t.	c #4D4D4D",
-"u.	c #9B9B9B",
-"v.	c #626262",
-"w.	c #222222",
-"x.	c #313131",
-"y.	c #5D5D5D",
-"z.	c #404040",
-"A.	c #090909",
-"B.	c #4A4A4A",
-"C.	c #414141",
-"D.	c #8E8E8E",
-"E.	c #939393",
-"F.	c #999999",
-"G.	c #0A0A0A",
-"H.	c #4B4B4B",
-"I.	c #8C8C8C",
-"J.	c #151515",
-"K.	c #979797",
-"L.	c #717171",
-"M.	c #616161",
-"N.	c #212121",
-"O.	c #808080",
-"P.	c #8F8F8F",
-"Q.	c #9C9C9C",
-"R.	c #191919",
-"S.	c #5A5A5A",
-"T.	c #848484",
-"U.	c #3C3C3C",
-"V.	c #7D7D7D",
-"W.	c #828282",
-"X.	c #181818",
-"Y.	c #595959",
-"Z.	c #7F7F7F",
-"`.	c #525252",
-" +	c #161616",
-".+	c #1B1B1B",
-"++	c #545454",
-"@+	c #818181",
-"#+	c #444444",
-"$+	c #101010",
-"%+	c #2C2C2C",
-"&+	c #868686",
-"*+	c #252525",
-"=+	c #121212",
-"-+	c #434343",
-";+	c #424242",
+"d 	c #D7D7D7",
+"e 	c #E4E4E4",
+"f 	c #D6D6D6",
+"g 	c #D1D1D1",
+"h 	c #D5D5D5",
+"i 	c #00FF00",
+"j 	c #BFBFBF",
+"k 	c #C9C9C9",
+"l 	c #D2D2D2",
+"m 	c #D4D4D4",
+"n 	c #D3D3D3",
+"o 	c #ABABAB",
+"p 	c #B9B9B9",
+"q 	c #C8C8C8",
+"r 	c #9A9A9A",
+"s 	c #CACACA",
+"t 	c #CFCFCF",
+"u 	c #909090",
+"v 	c #9D9D9D",
+"w 	c #B3B3B3",
+"x 	c #8A8A8A",
+"y 	c #B1B1B1",
+"z 	c #B6B6B6",
+"A 	c #CBCBCB",
+"B 	c #CECECE",
+"C 	c #7E7E7E",
+"D 	c #8E8E8E",
+"E 	c #CDCDCD",
+"F 	c #7F7F7F",
+"G 	c #939393",
+"H 	c #A3A3A3",
+"I 	c #BCBCBC",
+"J 	c #D0D0D0",
+"K 	c #CCCCCC",
+"L 	c #7A7A7A",
+"M 	c #8C8C8C",
+"N 	c #999999",
+"O 	c #C4C4C4",
+"P 	c #B5B5B5",
+"Q 	c #A2A2A2",
+"R 	c #929292",
+"S 	c #878787",
+"T 	c #838383",
+"U 	c #858585",
+"V 	c #8B8B8B",
+"W 	c #9C9C9C",
+"X 	c #B0B0B0",
+"Y 	c #C5C5C5",
+"Z 	c #C7C7C7",
+"` 	c #BBBBBB",
+" .	c #ACACAC",
+"..	c #919191",
+"+.	c #8F8F8F",
+"@.	c #A0A0A0",
+"#.	c #AFAFAF",
+"$.	c #C2C2C2",
+"%.	c #C1C1C1",
+"&.	c #989898",
+"*.	c #A8A8A8",
+"=.	c #B8B8B8",
+"-.	c #C3C3C3",
+";.	c #C6C6C6",
+">.	c #9E9E9E",
+",.	c #BDBDBD",
+"'.	c #C0C0C0",
+").	c #373737",
+"!.	c #434343",
+"~.	c #585858",
+"{.	c #060606",
+"].	c #0E0E0E",
+"^.	c #1D1D1D",
+"/.	c #383838",
+"(.	c #5C5C5C",
+"_.	c #B4B4B4",
+":.	c #9B9B9B",
+"<.	c #A1A1A1",
+"[.	c #A6A6A6",
+"}.	c #A7A7A7",
+"|.	c #B2B2B2",
+"1.	c #565656",
+"2.	c #010101",
+"3.	c #020202",
+"4.	c #262626",
+"5.	c #666666",
+"6.	c #A4A4A4",
+"7.	c #AEAEAE",
+"8.	c #FF6600",
+"9.	c #535353",
+"0.	c #1C1C1C",
+"a.	c #040404",
+"b.	c #0C0C0C",
+"c.	c #3D3D3D",
+"d.	c #848484",
+"e.	c #AAAAAA",
+"f.	c #949494",
+"g.	c #B7B7B7",
+"h.	c #BABABA",
+"i.	c #BEBEBE",
+"j.	c #676767",
+"k.	c #2E2E2E",
+"l.	c #080808",
+"m.	c #050505",
+"n.	c #202020",
+"o.	c #525252",
+"p.	c #898989",
+"q.	c #323232",
+"r.	c #131313",
+"s.	c #505050",
+"t.	c #6A6A6A",
+"u.	c #282828",
+"v.	c #141414",
+"w.	c #ADADAD",
+"x.	c #4F4F4F",
+"y.	c #606060",
+"z.	c #363636",
+"A.	c #9F9F9F",
+"B.	c #222222",
+"C.	c #A9A9A9",
+"D.	c #313131",
+"E.	c #5A5A5A",
+"F.	c #404040",
+"G.	c #090909",
+"H.	c #4A4A4A",
+"I.	c #414141",
+"J.	c #3E3E3E",
+"K.	c #8D8D8D",
+"L.	c #0A0A0A",
+"M.	c #4B4B4B",
+"N.	c #969696",
+"O.	c #888888",
+"P.	c #979797",
+"Q.	c #242424",
+"R.	c #636363",
+"S.	c #212121",
+"T.	c #7B7B7B",
+"U.	c #191919",
+"V.	c #3C3C3C",
+"W.	c #7D7D7D",
+"X.	c #959595",
+"Y.	c #616161",
+"Z.	c #393939",
+"`.	c #181818",
+" +	c #595959",
+".+	c #161616",
+"++	c #151515",
+"@+	c #808080",
+"#+	c #1B1B1B",
+"$+	c #545454",
+"%+	c #818181",
+"&+	c #444444",
+"*+	c #101010",
+"=+	c #2C2C2C",
+"-+	c #828282",
+";+	c #252525",
+">+	c #121212",
+",+	c #868686",
+"'+	c #424242",
+")+	c #5B5B5B",
+"!+	c #7C7C7C",
+"~+	c #787878",
 "                                                                                                                                ",
 "                                                                                                                                ",
-"              . . + @ # # $ % & % % & * * = - ; > , ' ) ) ! ~ { { ] ^ / / ( _ : : < [ } } | 1 2 2 3 4 5 5 6 7 8 8 9 0 0         ",
-"              a a . + @ @ # # @ . a . . . + @ $ & - b ' ' ) ! ~ ~ { ] ^ ^ / ( _ _ : < [ [ } | 1 1 2 3 4 4 5 6 7 7 8 9 0         ",
-"          c c d a a . + @ + c c c c c c c c c e d @ = b ' ' ) ! ~ ~ { ] ^ ^ / ( _ _ : < [ [ } | 1 1 2 3 4 4 5 6 7 7 8 9         ",
-"          c c f d a a . . a c g g g g g g g c h i j @ - b ' ' ) ! ~ ~ { ] ^ ^ / ( _ _ : < [ [ } | 1 1 2 3 4 4 5 6 7 7 8         ",
-"          c c k f d a a a l c g g g g g g g c m n o d % > , ' ' ) ! ~ ~ { ] ^ ^ / ( _ _ : < [ [ } | 1 1 2 3 4 4 5 6 7 7         ",
-"          c c k k f d a f j c g g g g g g g c p m h e # - b , ' ' ) ! ~ ~ { ] ^ ^ / ( _ _ : < [ [ } | 1 1 2 3 4 4 5 6 7         ",
-"          c c l k k f d f q c g g g g g g g c r s n t @ - > b , ' ' ) ! ~ ~ { ] ^ ^ / ( _ _ : < [ [ } | 1 1 2 3 4 4 5 6         ",
-"          c c j l k k f k q c g g g g g g g c u v w x + = > > b , ' ' ) ! ~ ~ { ] ^ ^ / ( _ _ : < [ [ } | 1 1 2 3 4 4 5         ",
-"          c c e j l k k l y c g g g g g g g c z A B x . * ; > > b , ' ' ) ! ~ ~ { ] ^ ^ / ( _ _ : < [ [ } | 1 1 2 3 4 4         ",
-"          c c e e j l k j t c g g g g g g g c C A B x . & - ; > > b , ' ' ) ! ~ ~ { ] ^ ^ / ( _ _ : < [ [ } | 1 1 2 3 4         ",
-"          c c D e e j l j E c c c c c c c c c F G H x a & = - ; > > b , ' ' ) ! ~ ~ { ] ^ ^ / ( _ _ : < [ [ } | 1 1 2 3         ",
-"          c c q D e e j e y I B J K L M M N O P Q R E a % = = - ; > > b , ' ' ) ! ~ ~ { ] ^ ^ / ( _ _ : < [ [ } | 1 1 2         ",
-"          c c y q D e e D y S T U c c V r W p X Y Z D a $ * = = - ; > > b , ' ' ) ! ~ ~ { ] ^ ^ / ( _ _ : < [ [ } | 1 1         ",
-"          c c y y q D D y t i ` H c c A A J m  ...o e a @ $ % & & * = - - ; > b b , ' ) ! ~ ] ^ ^ / ( _ _ : < [ [ } | 1         ",
-"          c c t y t E +.+.o @.#.R c c s X $. .R I x y j f f d a . . + @ @ @ # $ % & * - > b ) ~ ] ^ / ( _ _ : < [ [ } |         ",
-"          c c E E c c c c c c c c c c c c c c c c c c c c c c c c c c c c c c c %.&.*.k . $ * > ' ~ ] / ( _ _ : < [ [ }         ",
-"          c c +.i c c c c c c c c c c c c c c c c c c c c c c c c c c c c c c c c =.-.;.>.,.e a % ; ' ~ ^ ( ( _ : < < [         ",
-"          c c i S I '. .U ).!.~.s c c r V {.G !.m U ].].^./.(.(././.(.(.Y  . . . ._.;.:.:.<.[.}.t f & ; ) ] / ( _ : < <         ",
-"          c c i @.#.R  .U Q |.~.s c c r r {.1.!.$.U U ].].^././.2.U U ^./.Y  . .3.Y /.4.5.6.c 7.8.C y a * , { / ( _ : <         ",
-"          c c i S I h n  .(.(.^.U c c 9.P 0.!.(. .H H w a.a.w H 2.(./.Y H b.R ....T w c.d.e.f.c g.h.i.@.j $ > ~ / ( _ :         ",
-"          c c o o @.#.j...'.R T a.c c A 0.!.Y R ` #.I k.@.@.I 2.2.2.Y H '.k.x +.E x k... .C l.g.c c m.n.j.q @ > ~ / ( _         ",
-"          c c S o o S @.k.k.k.I j.c c s s ].T I x t y y q q t 2.2.2.(.B h x j f a d l E Z w o.p.c c c q.i.'.t @ > { / (         ",
-"          c c S S o i i o i x o I c c ~.~.(.h i y e l k l e 2.2.2.2.2.].n o l + # $ @ a D @.n r.-.c c :.h.,.R y # b { (         ",
-"          c c @.S S o i x x x i k.c c ~.|.c...x D j k f k D 2.2./.2.2.X c.Z D . % & & % + j S a.s.<.c c c s.$...e & ) ^         ",
-"          c c k.@.S S o i x x i I c c X ~.c...i D l l k j 2.2.2.!.2.2.2.$.b.i k # & * * % @ j k.t.7.c c c m.i./.I d - ~         ",
-"          c c I k.@.S S o i x o #.c c X X (...o q j l j q 2.2./.J u.2.2.X Y Z q a $ & & & $ . q v.w.c c c c s.G w E % ,         ",
-"          c c I I k.@.S S o i o Z c c X X /.'.o t D e D 2.2.2.Q 1.A 2.2.2.m b.i l + $ % $ $ @ f R x.c c c c 5.y.m Z f -         ",
-"          c c #.I I k.@.S S o S Z c c s s U T @.+.t t +.2.2.].s G s |.2.2.|.Y ` y k c a a a . f E z.c c c c A.B.G w t %         ",
-"          c c Z #.I I k.@.S S @.` c c G 1.$.H j.@.S S 2.2.2.X 0.G !.U 2.2.2.).H #.E c c c q D e E C.c c c c c C.{./.@..         ",
-"          c c ` Z #.I I k.@.S k.j.c c c c c c c c c c c c c c c c c c c c c c c c c c h h c c o o C.c c c c c C.K Q ` k         ",
-"          c c ` ` Z #.I I k.@.k.h c c c c c c c c c c c c c c c c c c c c c c c c c c (.(.c c h ` C.c c c c c C.D.~...l         ",
-"          c c j.` ` Z #.I I k.I h c c {.K E.F.v J 1.2.2.E.F F r F.0.J 1.u.2.2.E.F.0.c c c m Y a.R C.c c c c G.H.F J T e         ",
-"          c c h j.j.` Z #.#.I #.h c c {.V K {.0.1.2.2.2.F I.r P 0.s ~.X 1.2.2.2.K P c 1.~.$.c.w b.C.c c c c J._.F G b.D         ",
-"          c c ..h j.j.` Z #.#.Z ..c c F.W {.1.~.!.2.2.K D.V {.J ).]./.^.U |.2.2.E.K.0.~.$.(.w R L.c c c c c [.d.F s T D         ",
-"          c c '...h j.j.` Z #.` '.c c u.{.1.$./.2.2.2.W V K.G m Y H a.w B /.2.2.2.p J m 3.T ` #.M.N.c c c 6.z.O.P.~...e         ",
-"          c c '.'...h j.j.` Z ` R c c A Q.~.(.w 2.2.2.2.2.2.2.2.2.2.2.2.2.2.2.2.2.p X c.R I i +.t.7.c c c R.S.T.W m Z l         ",
-"          c c R '.'...h j.j.` j.R c c A A |.Y 2.2.2.2.2.2.2.2.2.2.2.2.2.2.2.2.2.2.2.s Y ` x y y >.c c c g.U.V.C Q.Y S d         ",
-"          c c T R '.'...h j.j.h T c c Q.A !.Y a.B $.A W V 9.u.1.s ~.~.|.~.X v p {.u.~. .Z E D M.N.c c c [.d.W.V ~.T E +         ",
-"          c c b.T R '.'...h j...b.c c Q.Q.|.3.a.H ^.s Q.p Q.1.G X X ~.~.|.~.X G G X ].n k.E y %.c c :.X.Y.Z.C p /.#.l #         ",
-"          c c b.b.T R '.'...h ..n c c Q.Q.|.Y b.n B ^.m Q ).m U ].^./.(.(.(.(.(.(.Y n ` o E `. +c <.J.n.Z.N W !.b.+.a &         ",
-"          c c n b.b.T R '.'...'.n c c u.Q.~.Y b...T n a.w w a.b.T T R '.'.'.....h j.I o x n.X.c 6..+++@+N r G  .k.e @ *         ",
-"          c c a.n b.b.T R '.R T a.c c p u.~.Y T j.` j.h j.` ` Z #.I I k.@.S S o o i i i #+$+c g.%+,.&+L r 0.(.j.y a # *         ",
-"          c c w a.n b.n n b.T n B c c {.F.s (.n h ` Z Z #.I k.k.@.S o o o i x x x i Y.*+f.c =+-+C O O K v ^...x k + % &         ",
-"          c c w w w H H  .B B  .(.c c P P v U H b.R ..h h h j.` ` Z #.I I I k.b.r.c c <.$+-+A P V V K.J /.'.i j a # % &         ",
-"          c c H H c c c c c c c c c c c c c c c c c c c c c c c c c c c c c c c c c #+}.s Q.F.K.p v Q 3.h o e d @ # $ %         ",
-"          c c B 3.c c c c c c c c c c c c c c c c c c c c c c c c c c c c ;+r.*.u.).X G A Q.A J Q c.n Z +.e k . @ # # $         ",
-"          c c 3.Y ^.).1.p K.9.W V c c O.@+z r 9.F.u.Q.Q.Q.A 0.0.v 1.1.1.G J s s s s J G J ~.m c.n j.S +.D k a . + @ # #         ",
-"          c c 3.c.].Q 1.F.P W E.V c c O.O.&+P.9.{.p u.u.Q.Q.A A 0.v 1.1.1.G s s X |.).m ^.3.b...k.x q e l d a a . + @ @         ",
-"          c c 3.(./.m ~.1.A Q.u.K.c c M M O 9.Q.1.J X ~.~.~.|.!.!.Q ).$.$.m m ].^.c.B a.R j.I i E q e l k f d a a . + @         ",
-"          c c Y Y (.^.m ).!.!.c c c c c c r p X $.]./.c.Y Y Y 3. . .B H w w a.b.T '.j.#.@.o x t D e j l k k f d a a . +         ",
-"          c c c.Y Y (.(.(./.^.c X u.V I.c W 0.Q c.H a.n b.T T R '.....h h ` ` Z I @.S o x E t q D e e j l k k f d a a .         ",
-"          c c (.c.Y 3.Y Y Y c.U c A W c r P 1.$.3.n R '...h j.j.` Z #.#.I k.@.@.S i x +.E t y y q D e e j l k k f d a a         ",
-"          c c (.(.c.Y 3.3.3.Y ^.c 0.K.c E.F.J m 3.b.'.h h j.` Z Z #.I k.k.@.S o o i x +.+.E t y y q D e e j l k k f d a         ",
-"          c c /.(.(.c.Y 3.Y c.^.).c c P K.u.X ].B n R ..h h j.` Z Z #.I k.k.@.S o o i x +.+.E t y y q D e e j l k k f d         ",
-"          c c ^./.(.(.c.Y 3.c./.m c c F.p v |./.B b.R '...h h j.` Z Z #.I k.k.@.S o o i x +.+.E t y y q D e e j l k k f         ",
-"          c c ].^./.(.(.c.Y Y (.U !.G Q.A s m c.w b.R R '...h h j.` Z Z #.I k.k.@.S o o i x +.+.E t y y q D e e j l k k         ",
-"          c c ].].^./.(.(.c.Y c.^.$.~.J J !.].3.w b.T R R '...h h j.` Z Z #.I k.k.@.S o o i x +.+.E t y y q D e e j l k         ",
-"          c c U ].].^./.(.(.c.c.(.].$.Q ).U c.B a.n b.T R R '...h h j.` Z Z #.I k.k.@.S o o i x +.+.E t y y q D e e j l         ",
-"          c c c c c c c c c c c c c c c c c c c c c c c c c c c c c c c c c c c c c c c c c c c c c c c c c c c c c             ",
-"          c c c c c c c c c c c c c c c c c c c c c c c c c c c c c c c c c c c c c c c c c c c c c c c c c c c c c             ",
-"                                                                                                                                ",
-"                                                                                                                                "};
+"      . . . . . . . . . . . . . . . . . . . . . . . . . . . . . . . . . . . . . . . . . . . . . . . . . . . . . . . + +         ",
+"      . . . . . . . . . . . . . . . . . . . . . . . . . . . . . . . . . . . . . . . . . . . . . . . . . . . . . . . + +         ",
+"      . . @ @ # $ % % & * = * * = - - ; > , ' ) ! ~ ~ { ] ^ ^ / ( _ _ : < [ [ } | 1 1 2 3 4 4 5 6 7 7 8 9 0 0 a b b c c         ",
+"      . . d d @ # $ $ % % $ @ d @ @ @ # $ & = > e ! ! ~ { ] ] ^ / ( ( _ : < < [ } | | 1 2 3 3 4 5 6 6 7 8 9 9 0 a b c c         ",
+"      . . f d d @ # $ # c c c c c c c c c g f $ ; e ! ! ~ { ] ] ^ / ( ( _ : < < [ } | | 1 2 3 3 4 5 6 6 7 8 9 9 0 a c c         ",
+"      . . h f d d @ @ d c i i i i i i i c j k l $ > e ! ! ~ { ] ] ^ / ( ( _ : < < [ } | | 1 2 3 3 4 5 6 6 7 8 9 9 0 c c         ",
+"      . . m h f d d d n c i i i i i i i c o p q f * ' ) ! ! ~ { ] ] ^ / ( ( _ : < < [ } | | 1 2 3 3 4 5 6 6 7 8 9 9 c c         ",
+"      . . m m h f d h l c i i i i i i i c r o j s m # e ) ! ! ~ { ] ] ^ / ( ( _ : < < [ } | | 1 2 3 3 4 5 6 6 7 8 9 c c         ",
+"      . . n m m h f h t c i i i i i i i c u v w j n # ' e ) ! ! ~ { ] ] ^ / ( ( _ : < < [ } | | 1 2 3 3 4 5 6 6 7 8 c c         ",
+"      . . l n m m h m t c i i i i i i i c x r y z A g ' ' e ) ! ! ~ { ] ] ^ / ( ( _ : < < [ } | | 1 2 3 3 4 5 6 6 7 c c         ",
+"      . . g l n m m n B c i i i i i i i c C D v z s @ , ' ' e ) ! ! ~ { ] ] ^ / ( ( _ : < < [ } | | 1 2 3 3 4 5 6 6 c c         ",
+"      . . g g l n m l E c i i i i i i i c F G H I s d > , ' ' e ) ! ! ~ { ] ] ^ / ( ( _ : < < [ } | | 1 2 3 3 4 5 6 c c         ",
+"      . . J g g l n l K c c c c c c c c c L M N I k d ; > , ' ' e ) ! ! ~ { ] ] ^ / ( ( _ : < < [ } | | 1 2 3 3 4 5 c c         ",
+"      . . t J g g l g B O P Q R S T T U V M W X Y J f ; ; > , ' ' e ) ! ! ~ { ] ] ^ / ( ( _ : < < [ } | | 1 2 3 3 4 c c         ",
+"      . . B t J g g J B Z `  .c c ..V U V +.@.#.$.J h @ @ @ l n m % & * d d @ @ > l $ % ( ( _ : < < [ } | | 1 2 3 3 c c         ",
+"      . . B B t J J B E k %.z c c v &.R r *.=.%.-.k K Z t J J g g l l n m h h f d g g l % e e _ : < < [ } | | 1 2 3 c c         ",
+"      . . E B E K A A q ;.-.I c c H >.N Q X ,.-.'.O Z '.q k s s A K K K E B t J g A E B @ # % & _ : < < [ } | | 1 2 c c         ",
+"      . . K K c c c c c c c c c c c c c c c c c c c c c c c c c c c c c c c ).!.~.E s B g m d # ' _ : < < [ } | | 1 c c         ",
+"      . . A k c c c c c c c c c c c c c c c c c c c c c c c c c c c c c c c c {.].^./.(.s k t n = > e ! : < [ } } | c c         ",
+"      . . k Z O ,._. .H :.r v c c u ..G :.<.+ [.<.}.*.#.X X #.#.X X |._._._._.1.^.2.2.3.4.5.;.B J n @ ' _ : < [ } } c c         ",
+"      . . k ;.-.I _. .Q r r v c c V V D r <.6.[.@.}.}.7.#.#.8. . .7.#.|._._.w |.#.9.0.a.c b.c.d.'.k g * ^ _ : < [ } c c         ",
+"      . . k Z O j p _.e.6.Q [.c c u ..f.<.e.7.X e.y |.=.g.z 8.X #.|.z h.I i.i.` g.y j.k.l.c m.n.o.j O h % ] _ : < [ c c         ",
+"      . . q q ;.-.'.i.,.I ` =.c c &.f.:. .I %.-.O Y ;.;.O 8.8.8.|.z ,.Y s A K s Y i._.p.q.m.c c r.s.p q n ' ] _ : < c c         ",
+"      . . Z q q Z ;.Y Y Y O '.c c H v }.P O s E B B t t E 8.8.8.X P j s l h d f n K $.g.t.u.c c c v.o.g.;.$ ' ^ _ : c c         ",
+"      . . Z Z q k k q k s q O c c + r 6.w k B g n m n g 8.8.8.8.8.w.p q n # % & $ d J ;.p x.].c c 2.n.y.z Z m e ^ : c c         ",
+"      . . ;.Z Z q k s s s k Y c c + @.o =.s J l m h m J 8.8.#.8.8.6.y $.J @ * = = * # l Z =.z.3.c c c z.6.=.s = ~ ( c c         ",
+"      . . Y ;.Z Z q k s s k O c c 6.A.o =.k J n n m l 8.8.8.}.8.8.8.e.h.k m % = - - * $ l Z y.b.c c c r.o.H g.t > ] c c         ",
+"      . . O Y ;.Z Z q k s q -.c c >.>.e.i.q t l n l t 8.8.#.Q :.8.8.6.|.$.t d & = = = & @ t y B.c c c c z.:.y Y * ) c c         ",
+"      . . O O Y ;.Z Z q k q $.c c >.>.C.,.q E J g J 8.8.8.*.@.v 8.8.8.o h.k n # & * & & $ h j D.c c c c 0.E.+ ` h > c c         ",
+"      . . -.O O Y ;.Z Z q Z $.c c v v [.` ;.A E E A 8.8.w.H <.H [.8.8.[.|.%.B m c d d d @ h K F.c c c c G.H.<.g.E * c c         ",
+"      . . $.-.O O Y ;.Z Z ;.%.c c <.@.e.z '.;.Z Z 8.8.8.6.>.<.}. .8.8.8.C.z -.K c c c t J g K I.c c c c c J.G C.;.@ c c         ",
+"      . . %.$.-.O O Y ;.Z Y '.c c c c c c c c c c c c c c c c c c c c c c c c c c j j c c q q I.c c c c c J.K.Q %.m c c         ",
+"      . . %.%.$.-.O O Y ;.Y j c c c c c c c c c c c c c c c c c c c c c c c c c c X X c c j %.I.c c c c c J.p.A.i.n c c         ",
+"      . . '.%.%.$.-.O O Y O j c c &.R G N A.Q @.8.8.G K.K.u N >.Q @.:.8.8.G N >.c c c o |.=.I I.c c c c L.M.K.Q ` g c c         ",
+"      . . j '.'.%.$.-.-.O -.j c c G M K.&.>.@.8.8.8.K.M u N.>.H + 6.@.8.8.8.R N.c @.+ e.y g.h.I.c c c c v.9.O.<.h.J c c         ",
+"      . . i.j '.'.%.$.-.-.$.i.c c f.+.G @.+ }.8.8.R D ..&.Q C.w.#.7. .[.8.8.G P.>.+ e.X g.Z y 2.c c c c Q.R.O.H ` J c c         ",
+"      . . ,.i.j '.'.%.$.-.%.,.c c N.G r e.#.8.8.8.f...P.<.o |.z =.g.P #.8.8.8.r Q o w ` %.Y f.S.c c c a.c.T.x + i.g c c         ",
+"      . . ,.,.i.j '.'.%.$.%.I c c &.P.A.X g.8.8.8.8.8.8.8.8.8.8.8.8.8.8.8.8.8.r 6.y I O k K y.b.c c c U.E.d.f.o $.n c c         ",
+"      . . I ,.,.i.j '.'.%.'.I c c &.&.@.|.8.8.8.8.8.8.8.8.8.8.8.8.8.8.8.8.8.8.8.H |.%.s B B /.c c c m.V.W.p.W |.Z f c c         ",
+"      . . ` I ,.,.i.j '.'.j ` c c P.&.<.|.=.P e.v f...X.:.@.H + + [.+ 6.A.r &.:.+ _.$.K J Y.S.c c c 4.R.W.M + ` K # c c         ",
+"      . . h.` I ,.,.i.j '.i.h.c c W W [.w =.z 7.H W r W @.<.6.6.+ + [.+ 6.<.<.6.w.p Y K B Z.c c 2.`. +T.d.X.#.-.n % c c         ",
+"      . . h.h.` I ,.,.i.j i.p c c P.P.@.|.h.p P 7.o *.C.o  .w.7.#.X X X X X X |.p %.q K o..+c 3.++s.F @++.<.h.A d = c c         ",
+"      . . p h.h.` I ,.,.i.,.p c c N.P.A.|.h.i.` p =.g.g.=.h.` ` I ,.,.,.i.i.j '.O q s s.`.c a.#+$+%+U u <._.Y g $ - c c         ",
+"      . . =.p h.h.` I ,.I ` =.c c X.N.A.|.` '.%.'.j '.%.%.$.-.O O Y ;.Z Z q q k k k &+*+c m.=+y.%+-+V >.X '.B d % - c c         ",
+"      . . g.=.p h.p p h.` p P c c G f.v X p j %.$.$.-.O Y Y ;.Z q q q k s s s k  +;+l.c >+!.p.V ,+K.r 7.i.s m # * = c c         ",
+"      . . g.g.g.z z _.P P _.X c c ....r  .z h.I i.j j j '.%.%.$.-.O O O Y h.x.c c 3.*+!.v ..M M R W C.,.k l d % * = c c         ",
+"      . . z z c c c c c c c c c c c c c c c c c c c c c c c c c c c c c c c c c I.5.H W N R X.r *.w j q g f $ % & * c c         ",
+"      . . P w c c c c c c c c c c c c c c c c c c c c c c c c c c c c '+x.)+N.H >.<.v P.&.P.Q o p $.A g m @ $ % % & c c         ",
+"      . . w |.7.C.r X.R u +.M c c T.!+L ,+V N :.P.P.P.&.N f.r r r r :.W v v &.&.P.<.Q A.+ o p '.Z A J m d @ # $ % % c c         ",
+"      . . w y w.*.r f...+.D M c c T.T.~+U ,+G X.N.N.P.P.&.G N r r r r :.v v >.@.H o 7.w._.=.Y s t g n f d d @ # $ $ c c         ",
+"      . . w X #.o A.r &.P.N.R c c C L ~+,+K.r W >.A.A.A.@.:.<.Q H 6.6.+ + }.*.o #.=.I '.O k K t g n m h f d d @ # $ c c         ",
+"      . . |.|.X 7.o C.}.}.c c c c c c V X.>.6.}.#.y |.|.|.w _._.P z g.g.=.h.` ,.'.-.;.q s E J g l n m m h f d d @ # c c         ",
+"      . . y |.|.X X X #.7.c 6.N.M -+c x N *.y z =.p h.` ` I ,.i.i.j j %.%.$.O ;.Z q s K E t J g g l n m m h f d d @ c c         ",
+"      . . X y |.w |.|.|.y  .c &.+.c V ..@.e.w p I ,.i.j '.'.%.$.-.-.O Y ;.;.Z k s A K E B B t J g g l n m m h f d d c c         ",
+"      . . X X y |.w w w |.7.c >.P.c D f.Q o w h.,.j j '.%.$.$.-.O Y Y ;.Z q q k s A A K E B B t J g g l n m m h f d c c         ",
+"      . . #.X X y |.w |.y 7.C.c c ..P.:.6.w.P p I i.j j '.%.$.$.-.O Y Y ;.Z q q k s A A K E B B t J g g l n m m h f c c         ",
+"      . . 7.#.X X y |.w y #.o c c +.X.r [.#.P h.I ,.i.j j '.%.$.$.-.O Y Y ;.Z q q k s A A K E B B t J g g l n m m h c c         ",
+"      . . w.7.#.X X y |.|.X  .<.:.R &.v o y g.h.I I ,.i.j j '.%.$.$.-.O Y Y ;.Z q q k s A A K E B B t J g g l n m m c c         ",
+"      . . w.w.7.#.X X y |.y 7.e.+ W W <.w.w g.h.` I I ,.i.j j '.%.$.$.-.O Y Y ;.Z q q k s A A K E B B t J g g l n m c c         ",
+"      . .  .w.w.7.#.X X y y X w.e.*.C. .y P =.p h.` I I ,.i.j j '.%.$.$.-.O Y Y ;.Z q q k s A A K E B B t J g g l n c c         ",
+"      + + c c c c c c c c c c c c c c c c c c c c c c c c c c c c c c c c c c c c c c c c c c c c c c c c c c c c c c c         ",
+"      + + c c c c c c c c c c c c c c c c c c c c c c c c c c c c c c c c c c c c c c c c c c c c c c c c c c c c c c c         "};
+
